note about the attractor keyword

--- a/example/live/html/item.html
+++ b/example/live/html/item.html
@@ -1,4 +1,4 @@
-<div class="item" click>
-  <div class="title"></div>
-  <div class="score"></div>
-</div>
+      <div class="item">
+        <div class="title"></div>
+        <div class="score"></div>
+      </div>
