--- a/example/live/html/item.html
+++ b/example/live/html/item.html
@@ -1,4 +1,4 @@
-      <div class="item">
-        <div class="title"></div>
-        <div class="score"></div>
-      </div>
+<div class="item" chooser="items">
+  <div class="title"></div>
+  <div class="score"></div>
+</div>
