using attr-submit

--- a/example/live/html/index.html
+++ b/example/live/html/index.html
@@ -10,7 +10,7 @@
       <button id="vote" class="hide">vote</button>
     </h2>
     
-    <form id="new">
+    <form x-submit>
       <input name="title" type="text">
       <input type="submit" value="create">
     </form>
