using a bound observable

--- a/example/live/html/index.html
+++ b/example/live/html/index.html
@@ -6,8 +6,10 @@
     <h1 id="name"></h1>
     <div id="list"></div>
     <h2>
-      <span id="active"></span>
-      <button id="vote" class="hide">vote</button>
+      <span id="active" x-bind="active"></span>
+      <button id="vote" class="hide">
+        vote
+      </button>
     </h2>
     
     <form x-submit>
