fix the hiddenness problem in the live example

--- a/example/live/html/index.html
+++ b/example/live/html/index.html
@@ -5,11 +5,9 @@
   <body>
     <h1 id="name"></h1>
     <div id="list"></div>
-    <h2>
+    <h2 class="hide">
       <span id="active" x-bind="active"></span>
-      <button id="vote" class="hide">
-        vote
-      </button>
+      <button id="vote">vote</button>
     </h2>
     
     <form x-submit>
