mindfuck finally works

--- a/example/live/html/index.html
+++ b/example/live/html/index.html
@@ -10,7 +10,7 @@
       <button id="vote">vote</button>
     </h2>
     
-    <form x-submit>
+    <form x-submit="addItem">
       <input name="title" type="text">
       <input type="submit" value="create">
     </form>
