ranges added into the new example

--- a/example/live/html/index.html
+++ b/example/live/html/index.html
@@ -4,7 +4,7 @@
   </head>
   <body>
     <h1 id="name"></h1>
-    <div id="list"></div>
+    <div id="list" x-range="range"></div>
     <h2 class="hide">
       <span id="active" x-bind="active"></span>
       <button id="vote">vote</button>
