--- a/example/live/html/index.html
+++ b/example/live/html/index.html
@@ -7,7 +7,7 @@
     <div id="list" x-range="range"></div>
     <h2 class="hide">
       <span id="active" x-bind="active"></span>
-      <button id="vote">vote</button>
+      <button x-click="vote">vote</button>
     </h2>
     
     <form x-submit="addItem">
