use scoped observables in the element updates

--- a/example/bind/index.html
+++ b/example/bind/index.html
@@ -7,6 +7,10 @@
       <hr>
       <h1>Hello <span binder="yourName"></span>!</h1>
     </div>
+    <div>
+      <input type="text" binder="xxx" placeholder="whoa">
+      <h1>xxx: <span binder="xxx"></span></h1>
+    </div>
     <script src="bundle.js"></script>
   </body>
 </html>
