--- a/example/clicker/index.html
+++ b/example/clicker/index.html
@@ -2,13 +2,13 @@
 <body>
 <table>
 <tr>
-  <td><button x-click="attach">volume 1</button></td>
+  <td><button x-click="clicker">volume 1</button></td>
 </tr>
 <tr>
-  <td><button x-click="attach">volume 2</button></td>
+  <td><button x-click="clicker">volume 2</button></td>
 </tr>
 <tr>
-  <td><button x-click="attach">volume 3</button></td>
+  <td><button x-click="clicker">volume 3</button></td>
 </tr>
 </table>
 <script src="bundle.js"></script>
